# fastapi-task-manager

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  LICENSE  alembic.ini  compose.test.yml  compose.yml  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: 1259f00efb77_.py  66900719b59c_.py  ef60dd9d717c_.py
nginx/: nginx.conf
src/: exceptions.py  main.py  run.py
src/api/: __init__.py  dependencies.py  groups.py  tasks.py  users.py
src/auth/: __init__.py  auth_service.py  dependencies.py  exceptions.py  routes.py  schemas.py  tokens.py
src/core/: __init__.py  config.py  database.py  logger.py
src/core/gunicorn_app/: __init__.py  app.py  app_options.py
src/exceptions/: __init__.py
src/exceptions/repositories/: __init__.py  base_exceptions.py  integrity_exceptions.py
src/exceptions/services/: __init__.py  base_exceptions.py  groups_service_exceptions.py  tasks_service_exceptions.py  users_service_exceptions.py
src/infrastructure/: __init__.py
src/infrastructure/sqlalchemy/: __init__.py
src/interfaces/: __init__.py  abstract_repository.py  abstract_uow.py
src/interfaces/repository/: abstract_repository.py
src/interfaces/unit_of_work/: __init__.py  abstract_uow.py
src/models/: __init__.py  group.py  relations.py  task.py  user.py
src/repositories/: __init__.py  groups_repository.py  sqlalchemy_repository.py  sqlalchemy_uow.py  tasks_repository.py  users_repository.py
src/schemas/: __init__.py  group.py  task.py  user.py  users.py
src/services/: __init__.py  groups_service.py  tasks_service.py  users_service.py
tests/: conftest.py
tests/integration/: fixtures.py  helpers.py
tests/integration/auth/: fixtures.py  test_auth_api.py  test_auth_service.py
tests/integration/groups/: fixtures.py  helpers.py  test_groups_api.py  test_groups_repository.py  test_groups_service.py
tests/integration/tasks/: fixtures.py  helpers.py  test_tasks_api.py  test_tasks_repository.py  test_tasks_service.py
tests/integration/users/: fixtures.py  helpers.py  test_users_api.py  test_users_repository.py  test_users_service.py
tests/unit/: conftest.py  fixtures.py
tests/unit/auth/: fixtures.py  (+2 more)
(+18 files in other folders)
