[tool.poetry]
name = "fastapi_task_manager"
version = "0.1.0"
description = ""
authors = ["dehorik <tsiptsin.egor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.40"
uvicorn = "^0.34.0"
alembic = "^1.15.2"
pydantic-settings = "^2.8.1"
asyncpg = "^0.30.0"
passlib = "^1.7.4"
pyjwt = "^2.10.1"
bcrypt = "^4.3.0"
gunicorn = "^23.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
